--- a/assets/css/style_senha.css
+++ b/assets/css/style_senha.css
@@ -32,6 +32,7 @@ header i{
     font-size: 30px;
 }
 
+
 /*logo img*/
 .logo_flower{
     justify-content: center;
@@ -65,6 +66,7 @@ header i{
     color: var(--verde_claro);
     width: 100%;
     margin: 0px 60px 10px 60px;
+    text-align: center;
     
 }
 /*Texto_logo*/
@@ -96,7 +98,7 @@ form{
 }
 /*lembrar de mim*/
 .form-check{
-    justify-content: space-between;
+    justify-content: center;
     display: flex;
     align-items: center;
     box-shadow: none;
@@ -117,6 +119,9 @@ form{
     border-radius: 50px;
     color: var(--verde_claro);
     box-shadow: none;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 
 }
 .form-check-input:hover{
@@ -134,7 +139,10 @@ form{
     border-color: var(--verde_claro);
     box-shadow: none;
 }
-
+.termos{
+    cursor: pointer;
+    color: var(--verde);
+}
 /*lembrar de mim*/
 /*login*/
 
@@ -152,145 +160,102 @@ form{
 /*login*/
 /*forms*/
 
-/*OU*/
-.ou {
-    height: 3px;
-    background-color: var(--verde_claro);
-    text-align: center;
-    margin: 10px 20px;
-  }
-.ou span {
-    background-color: white;
-    position: relative;
-    top: -15px;
-    padding: 0 10px;
-    font-size: 20px;
-    color: var(--verde_claro);
-  }
-/*OU*/
-
-/*Accont*/
-.accont {
-    width: 90%;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: auto;
-
-}
-.accont img{
-    margin: 15px 50px;
-    box-shadow: #64646f33 0px 3px 20px 0px;
-    border-radius: 50px;
-    transition: 0.3s;
-    cursor: pointer;
-}  
-/*Accont*/
-
-
-/*Criar conta*/
-.criar_conta{
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    font-size: 15px;
-    
-}
-.criar_conta a{
-    text-decoration: none;
-    transition: 0.3s;
-    color: var(--verde);
-}
 #moca img{
     display: none;
 }
-    /*Criar conta*/
-
-    @media (min-width:660px) {
-        .Texto_logo p{
-            margin: 0px 120px;
-            margin-bottom: 10px;
-        }
-        form{
-            margin: 0px 130px;
-        }
-        .ou{
-            margin: 10px 100px;
-        }
-        .accont img{
-            margin: 15px 155px;
-        }
-        .logo_flower img {
-            width: 40%;
-        }
+@media (min-width:660px) {
+    .Texto_logo p{
+        margin: 0px 120px;
+        margin-bottom: 10px;
     }
-    @media  only screen and (min-width:1024px){
-        .accont img{
-            margin: 15px 220px;
-        }
-        .Texto_logo p{
-            margin: 0px 200px;
-            margin-bottom: 10px;
-        }
-        p, a, label, ::placeholder {
-            font-size: 25px !important;
-        }
-        .logo_flower img {
-            width: 30%;
-        }
-        .form-control {
-            height: 50px;
-            padding: 6px 12px 0px 12px;
-        }
-        .btn-primary{
-            height: 45px;
-            font-size: 20px;
-        }
-        .form-check{
-            padding-left: 50px;
-        }
-        input[type=email]{
-            font-weight: 700;
-            font-size: 25px;
-            padding:0;
-            padding-left: 10px;
-        }
-        input[type=password]{
-            font-weight: 700;
-            font-size: 25px;
-            padding:0;
-            padding-left: 10px;
-        }
+    form{
+        margin: 0px 130px;
     }
-    @media  only screen and (min-width:1200px){
-        .Texto_logo p{
-            margin: 0px 120px;
-            margin-bottom: 10px;
-        }
-        #lateral{
-            width: 800px;
-        }
-        #moca img{
-            display: flex;
-            width: 30rem;
-        }
-        main{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        body{
-            background-image :  url(../img/pag2/pag_2_fundo.svg);
-            background-repeat: no-repeat;
-            background-size: 70%;
-            background-position: -100px;
-        }
-        .form-control{
-            padding: 6px 12px 0px 12px;
-        }
-        .accont img{
-            margin: 15px 150px;
-        }
+    .ou{
+        margin: 10px 100px;
+    }
+    .accont img{
+        margin: 15px 155px;
+    }
+    .logo_flower img {
+        width: 40%;
+    }
+}
+@media  only screen and (min-width:1024px){
+    .accont img{
+        margin: 15px 220px;
+    }
+    .Texto_logo p{
+        margin: 0px 200px;
+        margin-bottom: 10px;
+    }
+    p, a, label, ::placeholder {
+        font-size: 25px !important;
+    }
+    .logo_flower img {
+        width: 30%;
+    }
+    .form-control {
+        height: 50px;
+        padding: 6px 12px 0px 12px;
+    }
+    .btn-primary{
+        height: 45px;
+        font-size: 20px;
+    }
+    .form-check{
+        padding-left: 50px;
+    }
+    input[type=email]{
+        font-weight: 700;
+        font-size: 25px;
+        padding:0;
+        padding-left: 10px;
+    }
+    input[type=password]{
+        font-weight: 700;
+        font-size: 25px;
+        padding:0;
+        padding-left: 10px;
+    }
+    input[type=text]{
+        font-weight: 700;
+        font-size: 25px;
+        padding:0;
+        padding-left: 10px;
+    }
+}
+@media  only screen and (min-width:1200px){
+    .Texto_logo p{
+        margin: 0px 120px;
+        margin-bottom: 10px;
 
     }
+    #lateral{
+        width: 800px;
+        margin-left: -80px;
+    }
+    #moca img{
+        display: flex;
+        width: 25rem;
+    }
+    main{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-left: 55px;
+    }
+    body{
+        background-image :  url(../img/pag2/pag_2_fundo.svg);
+        background-repeat: no-repeat;
+        background-size: 800px;
+
+    }
+    .form-control{
+        padding: 6px 12px 0px 12px;
+    }
+    .accont img{
+        margin: 15px 150px;
+    }
+
+}
